# Open-Source-Chess-Explorer

./: .gitignore  ChessExplorer.spec  EXECUTABLE_README.txt  README.md  RELEASE_INSTRUCTIONS.md  Test.py  Trie.py  benchmark_trie.py  build_exe.bat  eval_cache.json  exploreTrie.py  filterGames.py  importGames.py  launch_ui.py  pyproject.toml  serve_frontend.py
chess_explorer/: __init__.py  constants.py  explore_trie.py  filter_games.py  import_games.py  import_lichess.py  import_pgn.py  list_players.py  storage.py  top_positions.py  trie.py
examples/: sample_games.json
frontend/: app.js  index.html  styles.css
games/: .gitkeep
games/lichess/: ant2010.json
tests/: conftest.py  test_cli_smoke.py  test_filter_trie.py  test_import_lichess.py  test_import_pgn.py
tests/fixtures/: sample.pgn
